--- a/Home/Home.html
+++ b/Home/Home.html
@@ -88,8 +88,8 @@
                 <div class="col-lg-7 col-md-6">
                   <div class="about-content" data-aos="fade-left" data-aos-delay="100">
                     <h2>About LetsStudy</h2>
-                    <h3>Belajar di LetsStudy sangat berguna buat masa depan.</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                    <h3>Mencatat semua hal penting mudah dan nyaman di LetsStudy</h3>
+                    <p>Menciptakan sarana bagi siswa SMP untuk mencatat dan mengevaluasi apa yang mereka sudah kerjakan.</p>
                     <p>Aut dolor id. Sint aliquam consequatur ex ex labore. Et quis qui dolor nulla dolores neque. Aspernatur consectetur omnis numquam quaerat. Sed fugiat nisi. Officiis veniam molestiae. Et vel ut quidem alias veritatis repudiandae ut fugit. Est ut eligendi aspernatur nulla voluptates veniam iusto vel quisquam. Fugit ut maxime incidunt accusantium totam repellendus eum error. Et repudiandae eum iste qui et ut ab alias.</p>
                     <ul>
                       <li><i class="bi bi-check-circle"></i> Statistik yang diperoleh.</li>
@@ -115,11 +115,8 @@
                                 <div class="col-md-10">
                                     <div class="card-body-secthree rounded-0 py-2 border-0" style="display: block;">
                                         <h5 class="card-title-secthree">Statistik</h5>
-                                        <p class="card-text-secthree">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                                            Praesent iaculis sed purus pretium mattis sit sed feugiat varius. Pharetra
-                                            volutpat, hendrerit adipiscing tempor eget neque quam platea. Quis augue
-                                            nibh
-                                            vitae arcu.</p>
+                                        <p class="card-text-secthree">Sarana untuk mengevaluasi apa yang sudah ananda capai menurut 
+                                            apa yang ananda cantumkan pada tabel statistik kami.</p>
                                         <a href="/Statistik/statistik.html" class="btn btn-primary">Click Here !!!</a>
                                     </div>
                                 </div>
@@ -133,11 +130,9 @@
                                 <div class="col-md-10">
                                     <div class="card-body-secthree rounded-0 py-2 border-0" style="display: block;">
                                         <h5 class="card-title-secthree">Home Work</h5>
-                                        <p class="card-text-secthree">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                                            Praesent iaculis sed purus pretium mattis sit sed feugiat varius. Pharetra
-                                            volutpat, hendrerit adipiscing tempor eget neque quam platea. Quis augue
-                                            nibh
-                                            vitae arcu.</p>
+                                        <p class="card-text-secthree">Sarana bagi anak untuk mencatat apa yang mereka
+                                            ingin kerjakan pada kemudian hari.
+                                        </p>
                                         <a href="/HomeWork/homework.html" class="btn btn-primary">Click Here !!!</a>
                                     </div>
                                 </div>
