--- a/HomeWork/homework.html
+++ b/HomeWork/homework.html
@@ -40,7 +40,7 @@
 <body>
     <header id="header" class="header fixed-top">
         <div class="container-fluid container-xl d-flex align-items-center justify-content-between">
-            <a href="index.html" class="logo d-flex align-items-center">
+            <a href="/Home/Home.html" class="logo d-flex align-items-center">
                 <span>LetsStudy</span>
             </a>
             <nav id="navbar" class="navbar">
@@ -113,7 +113,7 @@
                                 <tbody id="tasks">
 
                                 </tbody>
-<<<<<<< HEAD
+
 
                                 
                             </table>
@@ -129,7 +129,7 @@
 
 
                         <!-- <div class="col-md-6 col-lg-5 d-flex align-items-stretch mb-5 mb-lg-0">
-=======
+
                         </div>
                         <div id="edit-box" role="aria-hidden">
                             <form action="javascript:void(0);" method="POST" id="save-edit">
@@ -138,7 +138,7 @@
                             </form>  
                           </div>
                             <!-- <div class="col-md-6 col-lg-5 d-flex align-items-stretch mb-5 mb-lg-0">
->>>>>>> fadd5bcda707167b2904ec13c4e7906125aa6198
+
                                 <div class="icon-box" data-aos="fade-up" data-aos-delay="100">
                                     <h4 class="title d-flex justify-content-center">
                                         <p>Bahasa Inggris</p>
@@ -197,13 +197,12 @@
                          -->
                     </div>
                 </div>
-<<<<<<< HEAD
         </section>
 
 
-=======
+
             </section>
->>>>>>> fadd5bcda707167b2904ec13c4e7906125aa6198
+
     </main>
     <!-- back to top -->
     <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i
