--- a/Profile/profile.html
+++ b/Profile/profile.html
@@ -40,7 +40,7 @@
 <body onload="profile()">
     <header id="header" class="header fixed-top">
         <div class="container-fluid container-xl d-flex align-items-center justify-content-between">
-            <a href="index.html" class="logo d-flex align-items-center">
+            <a href="/Home/Home.html" class="logo d-flex align-items-center">
                 <span>LetsStudy</span>
             </a>
             <nav id="navbar" class="navbar">
