--- a/Home/Home.html
+++ b/Home/Home.html
@@ -81,7 +81,7 @@
       
                 <div class="col-lg-5 col-md-6">
                   <div class="about-img" data-aos="fade-right" data-aos-delay="100">
-                    <img src="/pict/orang.jpg" alt="">
+                    <img src="/pict/icon.svg">
                   </div>
                 </div>
       
@@ -89,8 +89,8 @@
                   <div class="about-content" data-aos="fade-left" data-aos-delay="100">
                     <h2>About LetsStudy</h2>
                     <h3>Belajar di LetsStudy sangat berguna buat masa depan.</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-                    <p>Aut dolor id. Sint aliquam consequatur ex ex labore. Et quis qui dolor nulla dolores neque. Aspernatur consectetur omnis numquam quaerat. Sed fugiat nisi. Officiis veniam molestiae. Et vel ut quidem alias veritatis repudiandae ut fugit. Est ut eligendi aspernatur nulla voluptates veniam iusto vel quisquam. Fugit ut maxime incidunt accusantium totam repellendus eum error. Et repudiandae eum iste qui et ut ab alias.</p>
+                    <p>Aplikasi ini salah satu alat bantu yang dapat membantu para siswa dalam mengoptimalkan kinerja belajar mereka adalah dengan memberikan mereka notes yang kiranya dapat membantu dalam mengingat apa yang harus mereka kerjakan. langkah lama dengan menggunakan kertas dapat kita tanggulangi dengen menggunakan web base note yang efisien bagi mereka siswa yang ingin mencatat apa yang mereka ingin ingat di kemudian hari. 
+                    </p>
                     <ul>
                       <li><i class="bi bi-check-circle"></i> Statistik yang diperoleh.</li>
                       <li><i class="bi bi-check-circle"></i> HomeWork yang dikerjakan.</li>
