--- a/Home/Home.html
+++ b/Home/Home.html
@@ -115,11 +115,8 @@
                                 <div class="col-md-10">
                                     <div class="card-body-secthree rounded-0 py-2 border-0" style="display: block;">
                                         <h5 class="card-title-secthree">Statistik</h5>
-                                        <p class="card-text-secthree">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                                            Praesent iaculis sed purus pretium mattis sit sed feugiat varius. Pharetra
-                                            volutpat, hendrerit adipiscing tempor eget neque quam platea. Quis augue
-                                            nibh
-                                            vitae arcu.</p>
+                                        <p class="card-text-secthree">Sarana untuk mengevaluasi apa yang sudah ananda capai menurut 
+                                            apa yang ananda cantumkan pada tabel statistik kami.</p>
                                         <a href="/Statistik/statistik.html" class="btn btn-primary">Click Here !!!</a>
                                     </div>
                                 </div>
@@ -133,11 +130,8 @@
                                 <div class="col-md-10">
                                     <div class="card-body-secthree rounded-0 py-2 border-0" style="display: block;">
                                         <h5 class="card-title-secthree">Home Work</h5>
-                                        <p class="card-text-secthree">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                                            Praesent iaculis sed purus pretium mattis sit sed feugiat varius. Pharetra
-                                            volutpat, hendrerit adipiscing tempor eget neque quam platea. Quis augue
-                                            nibh
-                                            vitae arcu.</p>
+                                        <p class="card-text-secthree">Sarana bagi anak untuk mencatat apa yang mereka
+                                            ingin kerjakan pada kemudian hari.</p>
                                         <a href="/HomeWork/homework.html" class="btn btn-primary">Click Here !!!</a>
                                     </div>
                                 </div>
