--- a/prelogin.html
+++ b/prelogin.html
@@ -31,6 +31,7 @@
       height: 10%; width: 75%;
       margin-bottom: 20px;
       padding-left: 10px;
+      border-radius: 10px;
       
     }
 
