--- a/Home/Home.html
+++ b/Home/Home.html
@@ -34,7 +34,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>homework</title>
+    <title>LetsStudy</title>
+    <link href='/pict/icon.svg' rel='shortcut icon'>
 
 </head>
 
@@ -130,7 +131,7 @@
                                 <div class="col-md-10">
                                     <div class="card-body-secthree rounded-0 py-2 border-0" style="display: block;">
                                         <h5 class="card-title-secthree">Home Work</h5>
-                                        <p class="card-text-secthree">Sarana bagi anak untuk mencatat apa yang mereka
+                                        <p class="card-text-secthree">Sarana bagi anak untuk mencatat dan mengingatkan apa yang mereka
                                             ingin kerjakan pada kemudian hari.</p>
                                         <a href="/HomeWork/homework.html" class="btn btn-primary">Click Here !!!</a>
                                     </div>
