--- a/Statistik/statistik.html
+++ b/Statistik/statistik.html
@@ -33,6 +33,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>LetsStudy</title>
+    <link href='/pict/icon.svg' rel='shortcut icon'>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 
 </head>
