--- a/Profile/profile.html
+++ b/Profile/profile.html
@@ -61,7 +61,7 @@
         <section id="hero" class="hero d-flex align-items-center">
             <div class="container">
                 <div>
-                    <h1>Information</h1>
+                    <h1>Your Profile</h1>
                     <div class="row">
                         <div id="profile" class="col-sm-5 text-center">
                             <div>
